syntax = "proto3";
package v1;

option java_package = "com.protoconf.datatypes.v1";

import "google/protobuf/any.proto";

message ProtoconfValue {
    string proto_file = 1;
    google.protobuf.Any value = 2;
    repeated SecretMetadata secrets = 3;
    repeated string additional_proto_files = 4;
}

message SecretMetadata {
    int32 pos = 1;
    int32 len = 2;
}
