syntax = "proto3";

message Secret {
  bool ignore_if_missing = 1;
  oneof secret {
    // Armed secrets
    string value = 2;

    // Unarmed secrets
    CharSecret char_secret = 4;
    VaultSecret vault_secret = 5;
  }
}

message CharSecret {
  string char = 1;
  int32 length = 2;
}

message VaultSecret {
  string path = 1;
  string key = 2;
}

message VaultValue { map<string, string> data = 1; }
